2008-03-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/remember.el (remember-diary-convert-entry): Revert last
	change (ill-conceived).

2008-03-29  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-hebrew.el (holiday-hebrew): Simplify.
	* calendar/cal-julian.el (holiday-julian): Simplify.

	* calendar/holidays.el (list-holidays): Use or.

2008-03-29  Juri Linkov  <juri@jurta.org>

	* window.el (split-window-preferred-horizontally): New function.

	* cus-start.el (split-window-preferred-function):
	Set choice for "vertically" to nil instead of split-window.
	Set choice for "horizontally" to split-window-preferred-horizontally
	instead of lambda.

2008-03-29  Juri Linkov  <juri@jurta.org>

	* simple.el (minibuffer-default-add-function): New variable with
	the default to minibuffer-default-add-completions.
	(minibuffer-default-add-done): New variable.  Make it buffer-local.
	(minibuffer-default-add-completions): New function.
	(goto-history-element): Set minibuffer-default-add-done to t and
	call a function in minibuffer-default-add-function when the
	specified absolute history position is greater than the length of
	the minibuffer-default list and minibuffer-default-add-done is nil.
	Change "^End of history; no next item$" to "^End of defaults;
	no next item$".

	* bindings.el (debug-ignored-errors): Change "^End of history;
	no next item$" to "^End of defaults; no next item$".

2008-03-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (with-temp-buffer): Assume kill-buffer can change cur-buf.

	* textmodes/remember.el (remember-diary-convert-entry): Prefer boundp
	to with-no-warnings.

2008-03-29  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.13.

	* net/tramp-ftp.el: Require 'cl when byte-compiling.

	* net/trampver.el: Update release number.

2008-03-29  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-menu-map-filter): Be more careful when finding
	the current backend.
